# haskell-kubernetes

./: CHANGELOG.md  LICENSE  README.md  default.nix  haskell-kubernetes.cabal  stack.yaml
client/: Main.hs
codegen/: Any.hs  README.md  codegen.sh  model.mustache
doc/: CONTRIBUTING.md  GETTING_STARTED.md  TODO.md
examples/: ExampleReplicationController.hs  ExampleService.hs
lib/: Apis.hs  Utils.hs
lib/Api/: ApivApi.hs
lib/Kubernetes/: Apis.hs  Utils.hs
lib/Kubernetes/Api/: ApivApi.hs
lib/Kubernetes/Model/Json/: WatchEvent.hs
lib/Kubernetes/Model/Unversioned/: ListMeta.hs  Patch.hs  Status.hs  StatusCause.hs  StatusDetails.hs
lib/Kubernetes/Model/V1/: AWSElasticBlockStoreVolumeSource.hs  Any.hs  Binding.hs  Capabilities.hs  Capability.hs  CephFSVolumeSource.hs  CinderVolumeSource.hs  ComponentCondition.hs  ComponentStatus.hs  ComponentStatusList.hs  ConfigMap.hs  ConfigMapKeySelector.hs  ConfigMapList.hs  Container.hs  ContainerImage.hs  ContainerPort.hs  ContainerState.hs  ContainerStateRunning.hs  ContainerStateTerminated.hs  ContainerStateWaiting.hs  ContainerStatus.hs  DaemonEndpoint.hs  DeleteOptions.hs  DownwardAPIVolumeFile.hs  DownwardAPIVolumeSource.hs  EmptyDirVolumeSource.hs  EndpointAddress.hs  EndpointPort.hs  EndpointSubset.hs  Endpoints.hs  EndpointsList.hs  EnvVar.hs  EnvVarSource.hs  Event.hs  EventList.hs  EventSource.hs  ExecAction.hs  FCVolumeSource.hs  FinalizerName.hs  FlexVolumeSource.hs  (+78 more)
lib/Model/: Integer.hs
lib/Model/Json/: WatchEvent.hs
lib/Model/Unversioned/: ListMeta.hs  Patch.hs  Status.hs  StatusCause.hs  StatusDetails.hs
lib/Model/V1/: AWSElasticBlockStoreVolumeSource.hs  Any.hs  Binding.hs  Capabilities.hs  Capability.hs  CephFSVolumeSource.hs  CinderVolumeSource.hs  ComponentCondition.hs  ComponentStatus.hs  ComponentStatusList.hs  ConfigMap.hs  ConfigMapKeySelector.hs  ConfigMapList.hs  Container.hs  ContainerImage.hs  ContainerPort.hs  ContainerState.hs  ContainerStateRunning.hs  ContainerStateTerminated.hs  ContainerStateWaiting.hs  ContainerStatus.hs  DaemonEndpoint.hs  DeleteOptions.hs  DownwardAPIVolumeFile.hs  DownwardAPIVolumeSource.hs  EmptyDirVolumeSource.hs  EndpointAddress.hs  EndpointPort.hs  EndpointSubset.hs  Endpoints.hs  EndpointsList.hs  EnvVar.hs  EnvVarSource.hs  Event.hs  EventList.hs  EventSource.hs  ExecAction.hs  FCVolumeSource.hs  FinalizerName.hs  FlexVolumeSource.hs  (+78 more)
server/: Main.hs
