name:                haskell-kubernetes
version:             0.1.0.0
synopsis:            Haskell bindings to the Kubernetes API (via swagger & servant)
description:         Please see README.md
homepage:            https://github.com/soundcloud/haskell-kubernetes
license:             MIT
license-file:        LICENSE
author:              Aaron Levin
maintainer:          aaron.levin@soundcloud.com
copyright:           2016 - SoundCloud Ltd.
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      lib
  exposed-modules:     Apis
                     , Api.ApivApi
                     --, Model.Integer
                     , Model.Json.WatchEvent
                     , Model.Unversioned.ListMeta
                     , Model.Unversioned.Patch
                     , Model.Unversioned.Status
                     , Model.Unversioned.StatusCause
                     , Model.Unversioned.StatusDetails
                     , Model.V1.Any
                     , Model.V1.AWSElasticBlockStoreVolumeSource
                     , Model.V1.Binding
                     , Model.V1.Capabilities
                     , Model.V1.Capability
                     , Model.V1.CephFSVolumeSource
                     , Model.V1.CinderVolumeSource
                     , Model.V1.ComponentCondition
                     , Model.V1.ComponentStatus
                     , Model.V1.ComponentStatusList
                     , Model.V1.ConfigMap
                     , Model.V1.ConfigMapKeySelector
                     , Model.V1.ConfigMapList
                     , Model.V1.Container
                     , Model.V1.ContainerImage
                     , Model.V1.ContainerPort
                     , Model.V1.ContainerState
                     , Model.V1.ContainerStateRunning
                     , Model.V1.ContainerStateTerminated
                     , Model.V1.ContainerStateWaiting
                     , Model.V1.ContainerStatus
                     , Model.V1.DaemonEndpoint
                     , Model.V1.DeleteOptions
                     , Model.V1.DownwardAPIVolumeFile
                     , Model.V1.DownwardAPIVolumeSource
                     , Model.V1.EmptyDirVolumeSource
                     , Model.V1.EndpointAddress
                     , Model.V1.EndpointPort
                     , Model.V1.EndpointSubset
                     , Model.V1.Endpoints
                     , Model.V1.EndpointsList
                     , Model.V1.EnvVar
                     , Model.V1.EnvVarSource
                     , Model.V1.Event
                     , Model.V1.EventList
                     , Model.V1.EventSource
                     , Model.V1.ExecAction
                     , Model.V1.FCVolumeSource
                     , Model.V1.FinalizerName
                     , Model.V1.FlexVolumeSource
                     , Model.V1.FlockerVolumeSource
                     , Model.V1.GCEPersistentDiskVolumeSource
                     , Model.V1.GitRepoVolumeSource
                     , Model.V1.GlusterfsVolumeSource
                     , Model.V1.HTTPGetAction
                     , Model.V1.Handler
                     , Model.V1.HostPathVolumeSource
                     , Model.V1.ISCSIVolumeSource
                     , Model.V1.Lifecycle
                     , Model.V1.LimitRange
                     , Model.V1.LimitRangeItem
                     , Model.V1.LimitRangeList
                     , Model.V1.LimitRangeSpec
                     , Model.V1.LoadBalancerIngress
                     , Model.V1.LoadBalancerStatus
                     , Model.V1.LocalObjectReference
                     , Model.V1.NFSVolumeSource
                     , Model.V1.Namespace
                     , Model.V1.NamespaceList
                     , Model.V1.NamespaceSpec
                     , Model.V1.NamespaceStatus
                     , Model.V1.Node
                     , Model.V1.NodeAddress
                     , Model.V1.NodeCondition
                     , Model.V1.NodeDaemonEndpoints
                     , Model.V1.NodeList
                     , Model.V1.NodeSpec
                     , Model.V1.NodeStatus
                     , Model.V1.NodeSystemInfo
                     , Model.V1.ObjectFieldSelector
                     , Model.V1.ObjectMeta
                     , Model.V1.ObjectReference
                     , Model.V1.PersistentVolume
                     , Model.V1.PersistentVolumeAccessMode
                     , Model.V1.PersistentVolumeClaim
                     , Model.V1.PersistentVolumeClaimList
                     , Model.V1.PersistentVolumeClaimSpec
                     , Model.V1.PersistentVolumeClaimStatus
                     , Model.V1.PersistentVolumeClaimVolumeSource
                     , Model.V1.PersistentVolumeList
                     , Model.V1.PersistentVolumeSpec
                     , Model.V1.PersistentVolumeStatus
                     , Model.V1.Pod
                     , Model.V1.PodCondition
                     , Model.V1.PodList
                     , Model.V1.PodSecurityContext
                     , Model.V1.PodSpec
                     , Model.V1.PodStatus
                     , Model.V1.PodTemplate
                     , Model.V1.PodTemplateList
                     , Model.V1.PodTemplateSpec
                     , Model.V1.Probe
                     , Model.V1.RBDVolumeSource
                     , Model.V1.ReplicationController
                     , Model.V1.ReplicationControllerList
                     , Model.V1.ReplicationControllerSpec
                     , Model.V1.ReplicationControllerStatus
                     , Model.V1.ResourceQuota
                     , Model.V1.ResourceQuotaList
                     , Model.V1.ResourceQuotaSpec
                     , Model.V1.ResourceQuotaStatus
                     , Model.V1.ResourceRequirements
                     , Model.V1.SELinuxOptions
                     , Model.V1.Secret
                     , Model.V1.SecretKeySelector
                     , Model.V1.SecretList
                     , Model.V1.SecretVolumeSource
                     , Model.V1.SecurityContext
                     , Model.V1.Service
                     , Model.V1.ServiceAccount
                     , Model.V1.ServiceAccountList
                     , Model.V1.ServiceList
                     , Model.V1.ServicePort
                     , Model.V1.ServiceSpec
                     , Model.V1.ServiceStatus
                     , Model.V1.TCPSocketAction
                     , Model.V1.Volume
                     , Model.V1.VolumeMount
                       Utils
  ghc-options:         -Wall -fcontext-stack=10000
  build-depends:       base
                     , aeson
                     , containers
                     , either
                     , http-types
                     , lens
                     , network-uri
                     , QuickCheck
                     , quickcheck-instances
                     , scientific
                     , servant
                     , servant-client
                     , servant-server
                     , split
                     , text
                     , unordered-containers
                     , vector
                     , wai
  default-language:    Haskell2010

executable client
  hs-source-dirs:      client
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , either
                     , haskell-kubernetes
                     , network-uri
                     , QuickCheck
                     , servant
                     , servant-client
                     , split
                     , transformers
  default-language:    Haskell2010

executable server
  hs-source-dirs:      server
  main-is:             Main.hs
  ghc-options:         -threaded -fcontext-stack=1000 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-kubernetes
                     , servant-server
                     , servant-mock
                     , warp
  default-language:    Haskell2010
